tests/ui/transmutability/enums/should_respect_endianness.stderr
error[E0277]: `Src` cannot be safely transmuted into `Unexpected`
  --> $DIR/should_respect_endianness.rs:35:36
   |
LL |     assert::is_transmutable::<Src, Unexpected>();
   |                                    ^^^^^^^^^^ at least one value of `Src` isn't a bit-valid value of `Unexpected`
   |
note: required by a bound in `is_transmutable`
  --> $DIR/should_respect_endianness.rs:13:14
   |
LL |       pub fn is_transmutable<Src, Dst>()
   |              --------------- required by a bound in this function
LL |       where
LL |           Dst: TransmuteFrom<Src, {
   |  ______________^
LL | |             Assume::ALIGNMENT
LL | |                 .and(Assume::LIFETIMES)
LL | |                 .and(Assume::SAFETY)
LL | |                 .and(Assume::VALIDITY)
LL | |         }>
   | |__________^ required by this bound in `is_transmutable`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0277`.
